{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 635,
  "lineage": "1d667284-0df0-76e7-c521-82105bbfe095",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "90"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-24T12:08:58.605-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-basics-365011/global/firewalls/demo-http",
            "log_config": [],
            "name": "demo-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/global/networks/kums-vpcnetwork",
            "priority": 1000,
            "project": "terraform-basics-365011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/global/firewalls/demo-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "lb-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.VPC_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-24T12:06:50.327-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-basics-365011/global/firewalls/demo-ssh",
            "log_config": [],
            "name": "demo-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/global/networks/kums-vpcnetwork",
            "priority": 1000,
            "project": "terraform-basics-365011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/global/firewalls/demo-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "lb-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.VPC_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": true,
            "allow_global_access": true,
            "backend_service": "projects/terraform-basics-365011/regions/us-west1/backendServices/l4-ilb-backend-subnet",
            "creation_timestamp": "2022-12-24T12:07:55.549-08:00",
            "id": "projects/terraform-basics-365011/regions/us-west1/forwardingRules/l4-ilb-forwarding-rule",
            "ip_address": "10.2.0.15",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "l4-ilb-forwarding-rule",
            "network": "kums-vpcnetwork",
            "network_tier": "PREMIUM",
            "project": "terraform-basics-365011",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/regions/us-west1/forwardingRules/l4-ilb-forwarding-rule",
            "subnetwork": "kums-vpcsubnetwork"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network"
              }
            ]
          ],
          "dependencies": [
            "google_compute_instance_template.terraform_demo_template",
            "google_compute_region_backend_service.ins_backend",
            "google_compute_region_health_check.hc",
            "google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/zones/us-west1-a/disks/kumsvm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-basics-365011/zones/us-west1-a/instances/kumsvm1",
            "instance_id": "4760636002820351284",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "#! /bin/bash\n\napt-get update \napt-get install -y apache2 php\napt-get install -y wget\ncd /var/www/html\nrm index.html -f\nrm index.php -f\nwget https://storage.googleapis.com/cloud-training/gcpnet/ilb/index.php\nMETA_REGION_STRING=$(curl \"http://metadata.google.internal/computeMetadata/v1/instance/zone\" -H \"Metadata-Flavor: Google\")\nREGION=`echo \"$META_REGION_STRING\" | awk -F/ '{print $4}'`\nsed -i \"s|region-here|$REGION|\" index.php"
            },
            "metadata_fingerprint": "UXneK0c8bjM=",
            "name": "kumsvm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.82.152.180",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/global/networks/kums-vpcnetwork",
                "network_ip": "10.2.0.6",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/regions/us-west1/subnetworks/kums-vpcsubnetwork",
                "subnetwork_project": "terraform-basics-365011"
              }
            ],
            "project": "terraform-basics-365011",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/zones/us-west1-a/instances/kumsvm1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "terraform"
            ],
            "tags_fingerprint": "Mmq5kKvgSFI=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network_interface"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "network"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_zones.zoneavailable",
            "google_compute_network.VPC_network",
            "google_compute_subnetwork.VPC_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "VPC_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-basics-365011/global/networks/kums-vpcnetwork",
            "mtu": 0,
            "name": "kums-vpcnetwork",
            "project": "terraform-basics-365011",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/global/networks/kums-vpcnetwork"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "name"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "ins_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/regions/us-west1/instanceGroups/terraform-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-12-24T12:07:32.422-08:00",
            "enable_cdn": false,
            "fingerprint": "hRu_V9eTDUU=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/regions/us-west1/healthChecks/l4-ilb-hc"
            ],
            "id": "projects/terraform-basics-365011/regions/us-west1/backendServices/l4-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL",
            "name": "l4-ilb-backend-subnet",
            "project": "terraform-basics-365011",
            "protocol": "TCP",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/regions/us-west1/backendServices/l4-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_instance_template.terraform_demo_template",
            "google_compute_region_health_check.hc",
            "google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "VPC_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-01T04:36:55.111-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/terraform-basics-365011/regions/us-west1/subnetworks/kums-vpcsubnetwork",
            "ip_cidr_range": "10.2.0.0/27",
            "name": "kums-vpcsubnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/global/networks/kums-vpcnetwork",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-basics-365011",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-basics-365011/regions/us-west1/subnetworks/kums-vpcsubnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.VPC_network"
          ]
        }
      ]
    }
  ]
}